fix (be/community) : DTO 변환으로 인한 수정